--- a/task1/index.html
+++ b/task1/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="task1.css">
     <title>JS-Start. 1 задача</title>
 </head>
 <body>
     <p>Посмотри в консоль, там что-то важное</p>
+    <img src="https://doct.ru/upload/img/articles/arrow-bottom.png" alt="Зеленая стрелка вниз">
 </body>
 <script src="script.js"></script>
 </html>
