--- a/task3/index.html
+++ b/task3/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="task3.css">
     <title>JS-Start. 3 задача</title>
 </head>
 <body>
-    <div id="trafficLight"></div>
+    <div class="lightBox">
+        <div id="trafficLight"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
