--- a/task3/index.html
+++ b/task3/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="lightBox">
-        <div id="trafficLight"></div>
+        <div id="greenLight"></div>
+        <div id="yellowLight"></div>
+        <div id="redLight"></div>
     </div>
     <script src="script.js"></script>
 </body>
