update trafficLight by classes

--- a/task3/index.html
+++ b/task3/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="lightBox">
-        <div id="greenLight"></div>
-        <div id="yellowLight"></div>
-        <div id="redLight"></div>
+        <div class="trafficLight" id="greenLight"></div>
+        <div class="trafficLight" id="yellowLight"></div>
+        <div class="trafficLight" id="redLight"></div>
     </div>
     <script src="script.js"></script>
 </body>
